--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           name: eld
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-          extraPullNames: kclejeune
+          extraPullNames: kclejeune,nix-community
       - name: Run Flake Checks
         run: |
           nix flake check -v --show-trace
