--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,12 @@ on:
       - main
 jobs:
   build:
-    runs-on: macos-11
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - macos-latest
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2.4.0
         with:
