close stdin for non-interactive CI runs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,4 +39,4 @@ jobs:
             cachix use eld
       - run:
           name: Flake check
-          command: nix flake check -v --show-trace
+          command: nix flake check -v --show-trace < /dev/null
