--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -9,19 +9,11 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build:
+  update:
     runs-on: ubuntu-latest
     steps:
-      # - uses: styfle/cancel-workflow-action@0.7.0
-      #   with:
-      #     access_token: ${{ github.token }}
       - uses: actions/checkout@v3
-        with:
-          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
-          fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
       - uses: cachix/install-nix-action@v18
-        env:
-          NIX_VERSION: nix-2.5pre20211026_5667822
         with:
           extra_nix_config: |
             experimental-features = nix-command flakes
@@ -31,21 +23,11 @@ jobs:
           git config --local user.email "flakebot@users.noreply.github.com"
           git config --local user.name "flakebot"
           git checkout -B flakebot
-      - name: Update and commit lockfile
-        run: nix flake update --commit-lock-file
-      - name: Push changes
-        uses: ad-m/github-push-action@master
+      - name: Update flake.lock
+        uses: DeterminateSystems/update-flake-lock@v15
         with:
-          github_token: ${{ secrets.REPO_ACCESS_TOKEN }}
-          branch: flakebot
-          force: true
-      - name: pull-request-action
-        uses: vsoch/pull-request-action@1.0.23
-        env:
-          GITHUB_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
-          PULL_REQUEST_FROM_BRANCH: "flakebot"
-          PULL_REQUEST_BRANCH: "main"
-          MAINTAINER_CANT_MODIFY: true
-          PASS_IF_EXISTS: true
-          PASS_ON_ERROR: true
-          PULL_REQUEST_TITLE: "Update Flake Inputs"
+          token: ${{ secrets.GITHUB_TOKEN }}
+          pr-title: "Update flake.lock"
+          pr-labels: |
+            dependencies
+            automated
