--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,7 +3,7 @@ name: Auto Update Flake Inputs
 on:
   schedule:
     # run this daily at 8am UTC, or roughly 4am eastern
-    - cron: "0 8 * * *"
+    - cron: '0 8 * * *'
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -18,15 +18,10 @@ jobs:
           extra_nix_config: |
             experimental-features = nix-command flakes
             access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
-      - name: Prepare flakebot branch
-        run: |
-          git config --local user.email "flakebot@users.noreply.github.com"
-          git config --local user.name "flakebot"
-          git checkout -B flakebot
       - name: Update flake.lock
         uses: DeterminateSystems/update-flake-lock@v15
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.REPO_ACCESS_TOKEN }}
           pr-title: "Update flake.lock"
           pr-labels: |
             dependencies
