--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,11 +53,13 @@ jobs:
             curl --proto '=https' --tlsv1.2 -sSf -L https://install.determinate.systems/nix | sh -s -- install --no-confirm
             echo 'export PATH=/nix/var/nix/profiles/per-user/"$USER"/profile/bin:/nix/var/nix/profiles/default/bin:"$PATH"' >> "$BASH_ENV"
           environment:
-            NIX_INSTALLER_EXTRA_CONF: "trusted-users = root circleci distiller"
+            NIX_INSTALLER_EXTRA_CONF: |
+              trusted-users = root circleci distiller
+              auto-optimise-store = false
       - run:
           name: Install Cachix and Use Binary Cache
           command: |
             nix profile install github:nixos/nixpkgs/nixos-22.11#cachix && cachix use $CACHIX_USER
       - run:
           name: Flake check
-          command: cachix watch-exec $CACHIX_USER -- nix flake check -j auto -v --show-trace --accept-flake-config
+          command: cachix watch-exec $CACHIX_USER -- nix flake check -j auto -v --show-trace --accept-flake-config --fallback
