--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  nix: eld/nix@1.0.0
+  nix: eld/nix@dev:0a7fc4855e30aac9c24d80989056794573bf17f3
 
 executors:
   x86_64-linux:
@@ -47,20 +47,27 @@ jobs:
       CACHIX_USER: eld
     steps:
       - checkout
-      - run:
-          name: Install Nix
-          command: |
-            curl --proto '=https' --tlsv1.2 -sSf -L https://install.determinate.systems/nix | sh -s -- install --no-confirm
-            echo 'export PATH=/nix/var/nix/profiles/per-user/"$USER"/profile/bin:/nix/var/nix/profiles/default/bin:"$PATH"' >> "$BASH_ENV"
-          environment:
-            NIX_INSTALLER_EXTRA_CONF: |
-              trusted-users = root circleci distiller
-              auto-optimise-store = false
-      - run:
-          name: Install Cachix and Use Binary Cache
-          command: |
-            nix profile install github:nixos/nixpkgs/nixos-22.11#cachix && cachix use $CACHIX_USER
-      - run:
-          name: Flake check
-          command: cachix watch-exec $CACHIX_USER -- nix flake check -j auto -v --show-trace --accept-flake-config --fallback
-          no_output_timeout: 20m
+      - nix/install
+      - nix/install-cachix:
+          cachix-installable: github:nixos/nixpkgs/nixpkgs-unstable#cachix
+      - nix/with-cachix:
+          cachix-user: eld
+          nix-command: nix flake check -j auto -v --show-trace --accept-flake-config --fallback
+
+      # - run:
+      #     name: Install Nix
+      #     command: |
+      #       curl --proto '=https' --tlsv1.2 -sSf -L https://install.determinate.systems/nix | sh -s -- install --no-confirm
+      #       echo 'export PATH=/nix/var/nix/profiles/per-user/"$USER"/profile/bin:/nix/var/nix/profiles/default/bin:"$PATH"' >> "$BASH_ENV"
+      #     environment:
+      #       NIX_INSTALLER_EXTRA_CONF: |
+      #         trusted-users = root circleci distiller
+      #         auto-optimise-store = false
+      # - run:
+      #     name: Install Cachix and Use Binary Cache
+      #     command: |
+      #       nix profile install github:nixos/nixpkgs/nixos-22.11#cachix && cachix use $CACHIX_USER
+      # - run:
+      #     name: Flake check
+      #     command: cachix watch-exec $CACHIX_USER -- nix flake check -j auto -v --show-trace --accept-flake-config --fallback
+      #     no_output_timeout: 20m
