--- a/modules/home-manager/dotfiles/iterm2/com.googlecode.iterm2.plist
+++ b/modules/home-manager/dotfiles/iterm2/com.googlecode.iterm2.plist
@@ -5044,7 +5044,7 @@
 			<key>ASCII Anti Aliased</key>
 			<true/>
 			<key>ASCII Ligatures</key>
-			<false/>
+			<true/>
 			<key>AWDS Pane Directory</key>
 			<string></string>
 			<key>AWDS Pane Option</key>
@@ -6352,7 +6352,7 @@
 			<key>Non-ASCII Ligatures</key>
 			<false/>
 			<key>Normal Font</key>
-			<string>CaskaydiaCoveNerdFontCompleteM-Regular 16</string>
+			<string>MapleMonoNF-Regular 16</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
