--- a/modules/home-manager/dotfiles/iterm2/com.googlecode.iterm2.plist
+++ b/modules/home-manager/dotfiles/iterm2/com.googlecode.iterm2.plist
@@ -6730,7 +6730,7 @@
 	<key>SeparateStatusBarsPerPane</key>
 	<false/>
 	<key>ShowFullScreenTabBar</key>
-	<false/>
+	<true/>
 	<key>SoundForEsc</key>
 	<false/>
 	<key>StatusBarPosition</key>
