Flake and CI update

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,7 +1,10 @@
 name: Check Nix Flake
-on: [push]
+on: [push, pull_request]
 jobs:
     check:
+      permissions:
+        contents: read
+        id-token: write
       strategy:
         matrix:
           os: [ubuntu-latest, macos-latest]
@@ -12,7 +15,5 @@ jobs:
           uses: DeterminateSystems/flake-checker-action@v5
         - name: Install Nix
           uses: DeterminateSystems/nix-installer-action@v4
-        - name: Run the Magic Nix Cache
-          uses: DeterminateSystems/magic-nix-cache-action@v2
         - name: Check Nix Flake
           run: nix flake check -j auto -v --show-trace --accept-flake-config --fallback --allow-import-from-derivation
