Don't fail-fast
Allow workflows to continue even if a matrix job fails (should resolve
the issue of Ubuntu canceling the macOS job)

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -6,6 +6,7 @@ jobs:
         contents: read
         id-token: write
       strategy:
+        fail-fast: false
         matrix:
           os: [ubuntu-latest, macos-latest]
       runs-on: ${{ matrix.os }}
