--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,5 +1,5 @@
 name: Check Nix Flake
-on: [push, pull_request]
+on: [push]
 jobs:
     check:
       permissions:
@@ -11,12 +11,12 @@ jobs:
           os: [ubuntu-latest, macos-latest]
       runs-on: ${{ matrix.os }}
       steps:
-        - uses: actions/checkout@v3
+        - uses: actions/checkout@v4
         - name: Check Nix flake inputs
-          uses: DeterminateSystems/flake-checker-action@v5
+          uses: DeterminateSystems/flake-checker-action@v8
         - name: Install Nix
-          uses: DeterminateSystems/nix-installer-action@v4
+          uses: DeterminateSystems/nix-installer-action@v12
         - name: Run the Magic Nix Cache
-          uses: DeterminateSystems/magic-nix-cache-action@v2
+          uses: DeterminateSystems/magic-nix-cache-action@v7
         - name: Check Nix Flake
           run: nix flake check -j auto -v --show-trace --accept-flake-config --fallback --allow-import-from-derivation
