Free up disk space on Linux CI

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -8,8 +8,10 @@ jobs:
       strategy:
         fail-fast: false
         matrix:
-          os: [ubuntu-latest, macos-latest]
-      runs-on: ${{ matrix.os }}
+          platform:
+            - { name: Linux, distro: ubuntu-latest }
+            - { name: macOS, distro: macos-latest }
+      runs-on: ${{ matrix.platform.distro }}
       steps:
         - uses: actions/checkout@v4
         - name: Check Nix flake inputs
@@ -18,5 +20,22 @@ jobs:
           uses: DeterminateSystems/nix-installer-action@v12
         - name: Run the Magic Nix Cache
           uses: DeterminateSystems/magic-nix-cache-action@v7
+        - name: Free Disk Space (Linux)
+          if: matrix.platform.name == 'Linux'
+          run: |
+              echo "Freeing up disk space on Linux CI"
+              df -h
+              sudo rm -rf /usr/share/dotnet/
+              sudo rm -rf /opt/ghc
+              sudo rm -rf /usr/local/share/boost
+              sudo rm -rf /usr/local/graalvm/
+              sudo rm -rf /usr/local/.ghcup/
+              sudo rm -rf /usr/local/share/powershell
+              sudo rm -rf /usr/local/share/chromium
+              sudo rm -rf /usr/local/lib/android
+              sudo rm -rf /usr/local/lib/node_modules
+              sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+              sudo docker image prune --all --force
+              df -h
         - name: Check Nix Flake
           run: nix flake check -j auto --show-trace --accept-flake-config --fallback --allow-import-from-derivation
