--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -20,6 +20,8 @@ jobs:
           uses: DeterminateSystems/flake-checker-action@v8
         - name: Install Nix
           uses: DeterminateSystems/nix-installer-action@v12
+          with:
+            github-token: ${{ secrets.GITHUB_TOKEN }}
         - name: Run the Magic Nix Cache
           uses: DeterminateSystems/magic-nix-cache-action@v7
         - name: Free Disk Space (Linux)
